[metadata]
name = pydelta-smt
version = attr: pydelta.version.VERSION
url = https://github.com/nafur/pydelta
download_url = https://github.com/nafur/pydelta
project_urls =
    Bug Tracker = https://github.com/nafur/pydelta/issues
    Documentation = https://pydelta.readthedocs.io/
    Source Code = https://github.com/nafur/pydelta
author = Gereon Kremer
author_email = gereon.kremer@gmail.com
license = MIT
license_file = LICENSE
description = Delta debugger for SMT-LIB files
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
install_requires =
    progressbar>=2.5
    sphinx-rtd-theme>=0.4.3
    importlib-metadata>=1.7 ; python_version<"3.8"
python_requires = >=3.5
scripts =
    bin/pydelta
