[metadata]
name = pydelta-smt
version = attr: pydelta.version.VERSION
url = https://github.com/nafur/pydelta
download_url = https://github.com/nafur/pydelta
project_urls =
    Bug Tracker = https://github.com/nafur/pydelta/issues
    Documentation = https://pydelta.readthedocs.io/
    Source Code = https://github.com/nafur/pydelta
author = Gereon Kremer
author_email = gereon.kremer@gmail.com
license = MIT
license_file = LICENSE
description = Delta debugger for SMT-LIB files
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = find:
install_requires =
    progressbar>=2.5
    sphinx-rtd-theme>=0.4.3
    importlib-metadata>=1.7 ; python_version<"3.8"
python_requires = >=3.5
scripts =
    bin/pydelta

[flake8]
count = True
ignore = E201,E202,E251,E301,E302,E305,F405
max-complexity = 15
max-line-length = 140
show-source = True
statistics = True
